--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
 </head>
 <body>
 <!-- header  -->
-<header  class="header">
+<header class="header">
   <div class="container">
-    <div class="row align-items-center justify-content-between">
-      <div class="logo">
-        <a href="index.
-        ">S & S</a>
+    <div class="row justify-content-between align-items-center">
+      <div class="brand-name logo">
+        <a href="index.html"  >S & S</a>
       </div>
       <div class="nav">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Couple</a></li>
           <li><a href="#">Story</a></li>
-          <li><a href="#">Events</a></li>
+          <li><a href="#">Event</a></li>
           <li><a href="#">People</a></li>
           <li><a href="#">Gallery</a></li>
           <li><a href="#">RSVP</a></li>
@@ -32,17 +31,56 @@
     </div>
   </div>
 </header>
-<!-- end of header  -->
+ 
+      <!--end of navbar  -->
 
 <!-- Home Section  -->
-<div class="home-section">
-  <div class="slide" >
-    <div class="row"></div>
+<section class="home-section">
+  <!-- slide start  -->
+  <div class="slide  active" style="background-image: url('./img/slides/slide-1.jpg');">
+    <div class="container"  >
+      <div class="row align-items-center">
+        <div class="home-content">
+          <p>We are Getting Married</p>
+          <h1>Soshiv & Shivani</h1>
+          <span>3 Aug 2023</span>
+        </div>
+      </div>
+    </div> 
   </div>
-</div>
+  <!-- end of slide  -->
+   <!-- slide start  -->
+   <div class="slide" style="background-image: url('./img/slides/slide-2.jpg');">
+    <div class="container"  >
+      <div class="row align-items-center">
+        <div class="home-content">
+          <p>We are Getting Married</p>
+          <h1>Soshiv & Shivani</h1>
+          <span>3 Aug 2023</span>
+        </div>
+      </div>
+    </div> 
+  </div>
+  <!-- end of slide  -->
+   <!-- slide start  -->
+   <div class="slide" style="background-image: url('./img/slides/slide-3.jpg');">
+    <div class="container"  >
+      <div class="row align-items-center">
+        <div class="home-content">
+          <p>We are Getting Married</p>
+          <h1>Soshiv & Shivani</h1>
+          <span>3 Aug 2023</span>
+        </div>
+      </div>
+    </div> 
+  </div>
+  <!-- end of slide  -->
+</section>
 <!-- End of Home Section  -->
 
-
+<!-- script  -->
+<script src="./js/jquery.min.js"></script>
+<script src="./js/main.js"></script>
 </body>
 </html>
 
