--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <!-- main css -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <!-- font-awesome  -->
+  <script src="https://kit.fontawesome.com/ed42b3f4d1.js" crossorigin="anonymous"></script>
   <!-- default skin -->
   <link rel="stylesheet" class="alternate-style" type="text/css" href="css/skins/pink.css">
 </head>
@@ -77,6 +80,59 @@
   <!-- end of slide  -->
 </section>
 <!-- End of Home Section  -->
+
+<!-- Couple section start  -->
+<section class="couple-section">
+  <div class="container">
+    <div class="row">
+      <div class="section-title">
+        <h2>Happy Couple</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="couple" >
+      <img src="./img/groom.jpg" alt="Happy Couple">
+      <h3>Soshivi Upreti</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis mollitia beatae obcaecati culpa facere doloribus qui enim corrupti, alias sed!Lorem beatae obcaecati culpa facere doloribus qui enim corrupti, alias sed!Lorem</p>
+      <div class="social-links">
+        <a href="#" title="facebook">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="#" title="twitter">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a href="#" title="instagram">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="#" title="linkedin">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+      </div>
+    </div>
+    <div class="couple">
+      <i class="fas fa-heart"></i>
+      <img src="./img/bride.jpg" alt="Happy Couple">
+      <h3>Shivani Gauniyal</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis mollitia beatae obcaecati culpa facere doloribus qui enim corrupti, alias sed!Lorem beatae obcaecati culpa facere doloribus qui enim corrupti, alias sed!Lorem</p>
+      <div class="social-links">
+        <a href="#" title="facebook">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="#" title="twitter">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a href="#" title="instagram">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="#" title="linkedin">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+      </div>
+    </div>
+    </div>
+  </div>
+</section>
+<!-- end of Couple section  -->
 
 <!-- script  -->
 <script src="./js/jquery.min.js"></script>
