--- a/index.html
+++ b/index.html
@@ -134,6 +134,79 @@
 </section>
 <!-- end of Couple section  -->
 
+<!-- story section start  -->
+<section class="story-section">
+  <div class="container">
+    <div class="row">
+      <div class="section-title">
+        <h2>Our Love Story</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="story-content">
+        <div class="row">
+          <!-- story item start  -->
+          <div class="story-item">
+            <i class="fas fa-heart"></i>
+            <div class="story-text">
+              <h3>First Meet</h3>
+              <span class="date"> 30 Feb 2022</span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore alias incidunt sed voluptates? Reprehenderit veritatis delectus praesentium amet exercitationem eius rerum nesciunt nemo quidem sapiente, ipsum dolorem? Autem, consectetur! delectus praesentium amet exercitationem eius rerum nesciunt nemo quidem sapiente, ipsum dolorem? Autem, consectetur!</p>
+            </div>
+            <div class="story-img">
+              <img src="./img/story/story-1.jpg" alt="Couple Love Story">
+
+            </div>
+          </div>
+          <!-- end of story item  -->
+                    <!-- story item start  -->
+                    <div class="story-item">
+                      <i class="fas fa-heart"></i>
+                      <div class="story-text">
+                        <h3>First Date</h3>
+                        <span class="date"> 28 Jul 2022</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore alias incidunt sed voluptates? Reprehenderit veritatis delectus praesentium amet exercitationem eius rerum nesciunt nemo quidem sapiente, ipsum dolorem? Autem, consectetur!delectus praesentium amet exercitationem eius rerum nesciunt nemo quidem sapiente, ipsum dolorem? Autem, consectetur! </p>
+                      </div>
+                      <div class="story-img">
+                        <img src="./img/story/story-2.jpg" alt="Couple Love Story">
+          
+                      </div>
+                    </div>
+                    <!-- end of story item  -->
+          <!-- story item start  -->
+          <div class="story-item">
+            <i class="fas fa-heart"></i>
+            <div class="story-text">
+              <h3>Proposal</h3>
+              <span class="date"> 9 Sep 2022</span>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore alias incidunt sed voluptates? Reprehenderit veritatis delectus praesentium amet exercitationem eius rerum nesciunt nemo quidem sapiente, ipsum dolorem? Autem, consectetur!delectus praesentium amet exercitationem eius rerum nesciunt nemo quidem sapiente, ipsum dolorem? Autem, consectetur!</p>
+            </div>
+            <div class="story-img">
+              <img src="./img/story/story-3.jpg" alt="Couple Love Story">
+            </div>
+          </div>
+          <!-- end of story item  -->
+                    <!-- story item start  -->
+                    <div class="story-item">
+                      <i class="fas fa-heart"></i>
+                      <div class="story-text">
+                        <h3>Engagement</h3>
+                        <span class="date"> 8 Oct 2022</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore alias incidunt sed voluptates? Reprehenderit veritatis delectus praesentium amet exercitationem eius rerum nesciunt nemo quidem sapiente, ipsum dolorem? Autem, consectetur! delectus praesentium amet exercitationem eius rerum nesciunt nemo quidem sapiente, ipsum dolorem? Autem, consectetur!</p>
+                      </div>
+                      <div class="story-img">
+                        <img src="./img/story/story-4.jpg" alt="Couple Love Story">
+          
+                      </div>
+                    </div>
+                    <!-- end of story item  -->
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- story section end  -->
+
 <!-- script  -->
 <script src="./js/jquery.min.js"></script>
 <script src="./js/main.js"></script>
