--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="story-text">
               <h3>First Meet</h3>
               <span class="date"> 30 Feb 2022</span>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore alias incidunt sed voluptates? Reprehenderit veritatis delectus praesentium amet exercitationem eius rerum nesciunt nemo quidem sapiente, ipsum dolorem? Autem, consectetur! delectus praesentium amet exercitationem eius rerum nesciunt nemo quidem sapiente, ipsum dolorem? Autem, consectetur!</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur labore alias incidunt sed voluptates? Reprehenderit veritatis delectus praesentium amet exercitationem eius rerum nesciunt nemo quidem sapiente, ipsum dolorem? Autem, consectetur! delectus praesentium amet exercitationem eius rerum nesciunt nemo quidem sapiente, ipsum dolorem? Autem, consectetur! </p>
             </div>
             <div class="story-img">
               <img src="./img/story/story-1.jpg" alt="Couple Love Story">
@@ -206,6 +206,45 @@
   </div>
 </section>
 <!-- story section end  -->
+
+<!-- event section start  -->
+
+<section class="event-section">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="section-title">
+        <h2>Celebrate Our Love</h2>
+      </div>
+    </div>
+    <div class="row">
+      <!-- item start  -->
+      <div class="event-item">
+        <div class="event-item-inner">
+          <h3>Cermony</h3>
+          <span class="date">3 Aug 2023</span>
+          <span class="time">5:00 - 12:00 PM</span>
+          <p>{ Shagun Farm }</p>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus nihil ipsum reiciendis quas unde in nobis? Atque fugit repellat odit.</p>
+          <img src="./img/icons/flower.svg" alt="">
+        </div>
+      </div>
+      <!-- item end  -->
+            <!-- item start  -->
+            <div class="event-item">
+              <div class="event-item-inner">
+                <h3>Reception</h3>
+                <span class="date">4 Aug 2023</span>
+                <span class="time">5:00 - 12:00 PM</span>
+                <p>{ Shagun Farm }</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus nihil ipsum reiciendis quas unde in nobis? Atque fugit repellat odit.</p>
+                <img src="./img/icons/flower.svg" alt="">
+              </div>
+            </div>
+            <!-- item end  -->
+    </div>
+  </div>
+</section>
+<!-- event section end  -->
 
 <!-- script  -->
 <script src="./js/jquery.min.js"></script>
