--- a/index.html
+++ b/index.html
@@ -246,6 +246,217 @@
 </section>
 <!-- event section end  -->
 
+<!-- people section start  -->
+<section class="people-section">
+  <div class="container">
+    <div class="row">
+      <div class="section-title">
+        <h2>People</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="people-filter">
+        <a href="javascript:void(0);" data-target="groomsmen" class="filter-btn ">Groomsmen</a>
+        <a href="javascript:void(0);" data-target="bridesmaid" class="filter-btn active ">Bridesmaid</a>
+      </div>
+    </div>
+    <!-- groomsmen start  -->
+    <div class="row justify-content-center">
+      <!-- people item start  -->
+      <div class="people-item" data-category="groomsmen">
+        <div class="people-item-inner">
+          <img src="./img/groomsmen/1.jpg" alt="groomsmen">
+          <h4>Monu Singh</h4>
+          <p>Best friend</p>
+          <div class="social-links">
+            <a href="#" title="facebook">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="#" title="twitter">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="#" title="instagram">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="#" title="linkedin">
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    <!-- people items end  -->
+          <!-- people item start  -->
+          <div class="people-item" data-category="groomsmen">
+            <div class="people-item-inner">
+              <img src="./img/groomsmen/2.jpg" alt="groomsmen">
+              <h4>Sardar Singh</h4>
+              <p> friend</p>
+              <div class="social-links">
+                <a href="#" title="facebook">
+                  <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="#" title="twitter">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a href="#" title="instagram">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#" title="linkedin">
+                  <i class="fa-brands fa-linkedin"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        <!-- people items end  -->
+              <!-- people item start  -->
+      <div class="people-item" data-category="groomsmen">
+        <div class="people-item-inner">
+          <img src="./img/groomsmen/3.jpg" alt="groomsmen">
+          <h4> Mike Jumey</h4>
+          <p> friend</p>
+          <div class="social-links">
+            <a href="#" title="facebook">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="#" title="twitter">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="#" title="instagram">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="#" title="linkedin">
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    <!-- people items end  -->
+          <!-- people item start  -->
+          <div class="people-item" data-category="groomsmen">
+            <div class="people-item-inner">
+              <img src="./img/groomsmen/4.jpg" alt="groomsmen">
+              <h4>Amit</h4>
+              <p>Friend</p>
+              <div class="social-links">
+                <a href="#" title="facebook">
+                  <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="#" title="twitter">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a href="#" title="instagram">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#" title="linkedin">
+                  <i class="fa-brands fa-linkedin"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        <!-- people items end  -->
+    
+    <!-- groomsmen end  -->
+    <!-- bridesmaid start  -->
+          <!-- people item start  -->
+          <div class="people-item" data-category="bridesmaid">
+            <div class="people-item-inner">
+              <img src="./img/bridesmaid/1.jpg" alt="bridesmaid">
+              <h4>Anna </h4>
+              <p> Best Friend</p>
+              <div class="social-links">
+                <a href="#" title="facebook">
+                  <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="#" title="twitter">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a href="#" title="instagram">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#" title="linkedin">
+                  <i class="fa-brands fa-linkedin"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        <!-- people items end  -->
+                  <!-- people item start  -->
+                  <div class="people-item" data-category="bridesmaid">
+                    <div class="people-item-inner">
+                      <img src="./img/bridesmaid/2.jpg" alt="bridesmaid">
+                      <h4>Neha Goshi </h4>
+                      <p>Friend</p>
+                      <div class="social-links">
+                        <a href="#" title="facebook">
+                          <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="#" title="twitter">
+                          <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="#" title="instagram">
+                          <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="#" title="linkedin">
+                          <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                <!-- people items end  -->
+                          <!-- people item start  -->
+          <div class="people-item" data-category="bridesmaid">
+            <div class="people-item-inner">
+              <img src="./img/bridesmaid/3.jpg" alt="bridesmaid">
+              <h4>Sarita Sharma </h4>
+              <p>Friend</p>
+              <div class="social-links">
+                <a href="#" title="facebook">
+                  <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="#" title="twitter">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a href="#" title="instagram">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#" title="linkedin">
+                  <i class="fa-brands fa-linkedin"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        <!-- people items end  -->
+                  <!-- people item start  -->
+                  <div class="people-item" data-category="bridesmaid">
+                    <div class="people-item-inner">
+                      <img src="./img/bridesmaid/4.jpg" alt="bridesmaid">
+                      <h4>Somya Guptah </h4>
+                      <p>Friend</p>
+                      <div class="social-links">
+                        <a href="#" title="facebook">
+                          <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="#" title="twitter">
+                          <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="#" title="instagram">
+                          <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="#" title="linkedin">
+                          <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                <!-- people items end  -->
+      <!-- bridesmaid end  -->
+    </div>
+  </div>
+</section>
+
+
+<!-- people section end  -->
+
 <!-- script  -->
 <script src="./js/jquery.min.js"></script>
 <script src="./js/main.js"></script>
