--- a/index.html
+++ b/index.html
@@ -533,6 +533,90 @@
 </div>
 <!-- gallery-popup end  -->
 
+<!-- rsvp section start  -->
+<section class="rsvp-section">
+  <div class="container">
+    <div class="row">
+      <div class="section-title">
+        <h2>You Are Invited</h2>
+        <p>Please Kindly Response Before 3 Aug 2023 </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="rsvp-form">
+        <form class="form">
+          <div class="row">
+            <div class="input-group w50">
+              <input type="text" placeholder="Name" class="input-control">
+            </div>
+            <div class="input-group w50">
+              <input type="email" placeholder="Email" class="input-control">
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-group">
+              <select class="input-control">
+                <option value="">Number of Guest</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-group">
+              <select class="input-control">
+                <option value="I am Not Attending">I am Not Attending</option>
+              </select>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-group">
+              <textarea placeholder="Message" class="input-control"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-group">
+              <button type="submit" class="btn-1">Send</button>
+
+            </div>
+          </div> 
+
+          
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- rsvp section end  -->
+
+<!-- footer start  -->
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="footer-content">
+        <div class="couple-name">
+          <img src="./img/flower-circle.png" alt="wedding-couple">
+          <h2>Soshiv
+            <span>&</span>
+            Shivani
+          </h2>
+        </div>
+        <p>Thank You</p>
+      </div>
+    </div>
+  </div>
+</footer>
+<!-- footer end  -->
+
+<!-- copyright start  -->
+
+<p class="copyright-text">copyright &copy; 2023 Nasaj</p>
+<!-- copyright end  -->
+
+
 
 
 
