--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <!-- font-awesome  -->
   <script src="https://kit.fontawesome.com/ed42b3f4d1.js" crossorigin="anonymous"></script>
+  <!-- responsive css  -->
+  <link rel="stylesheet"  type="text/css"  href="css/responsive.css">
   <!-- default skin -->
   <link rel="stylesheet" class="alternate-style" type="text/css" href="css/skins/pink.css">
 </head>
@@ -20,15 +22,18 @@
       <div class="brand-name logo">
         <a href="index.html"  >S & S</a>
       </div>
+      <div class="hamburger-btn">
+        <span></span>
+      </div>
       <div class="nav">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Couple</a></li>
-          <li><a href="#">Story</a></li>
-          <li><a href="#">Event</a></li>
-          <li><a href="#">People</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">RSVP</a></li>
+          <li><a href="#" data-scroll-nav="0" class="active">Home</a></li>
+          <li><a href="#" data-scroll-nav="1">Couple</a></li>
+          <li><a href="#" data-scroll-nav="2">Story</a></li>
+          <li><a href="#" data-scroll-nav="3">Event</a></li>
+          <li><a href="#" data-scroll-nav="4">People</a></li>
+          <li><a href="#" data-scroll-nav="5">Gallery</a></li>
+          <li><a href="#" data-scroll-nav="6">RSVP</a></li>
         </ul>
       </div>
     </div>
@@ -38,7 +43,7 @@
       <!--end of navbar  -->
 
 <!-- Home Section  -->
-<section class="home-section">
+<section class="home-section" data-scroll-index="0">
   <!-- slide start  -->
   <div class="slide  active" style="background-image: url('./img/slides/slide-1.jpg');">
     <div class="container"  >
@@ -82,7 +87,7 @@
 <!-- End of Home Section  -->
 
 <!-- Couple section start  -->
-<section class="couple-section">
+<section class="couple-section " data-scroll-index="1">
   <div class="container">
     <div class="row">
       <div class="section-title">
@@ -135,7 +140,7 @@
 <!-- end of Couple section  -->
 
 <!-- story section start  -->
-<section class="story-section">
+<section class="story-section" data-scroll-index="2">
   <div class="container">
     <div class="row">
       <div class="section-title">
@@ -209,7 +214,7 @@
 
 <!-- event section start  -->
 
-<section class="event-section">
+<section class="event-section" data-scroll-index="3">
   <div class="container">
     <div class="row justify-content-center">
       <div class="section-title">
@@ -247,7 +252,7 @@
 <!-- event section end  -->
 
 <!-- people section start  -->
-<section class="people-section">
+<section class="people-section" data-scroll-index="4">
   <div class="container">
     <div class="row">
       <div class="section-title">
@@ -459,7 +464,7 @@
 
 <!-- gallery section start  -->
 
-<section class="gallery-section">
+<section class="gallery-section" data-scroll-index="5">
   <div class="container">
     <div class="row">
       <div class="section-title">
@@ -534,7 +539,7 @@
 <!-- gallery-popup end  -->
 
 <!-- rsvp section start  -->
-<section class="rsvp-section">
+<section class="rsvp-section" data-scroll-index="6">
   <div class="container">
     <div class="row">
       <div class="section-title">
@@ -622,6 +627,7 @@
 
 <!-- script  -->
 <script src="./js/jquery.min.js"></script>
+<script src="./js/scrollIt.min.js"></script>
 <script src="./js/main.js"></script>
 </body>
 </html>
