--- a/index.html
+++ b/index.html
@@ -656,9 +656,10 @@
 
 <!-- Theme setting end  -->
 
-
-
-
+<!-- audio start  -->
+<audio src="./JONY - Love your voice.mp3" id="myAudio" loop="loop" type="audio/mp3"></audio>
+<i class="fa fa-music pause"></i>
+<!-- audio end  -->
 
 <!-- script  -->
 <script src="./js/jquery.min.js"></script>
