--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
 
 <!-- copyright start  -->
 
-<p class="copyright-text">copyright &copy; 2023 Nasaj</p>
+<p class="copyright-text">copyright &copy; 2023 Parwiz</p>
 <!-- copyright end  -->
 
 <!-- Theme setting start   -->
